reoptimized js & moved js scripts to main.js

--- a/index.html
+++ b/index.html
@@ -637,171 +637,6 @@
       </div>
     </dialog>
 
-    <script>
-      (() => {
-        const dialog = document.getElementById('element-dialog');
-        const title = document.getElementById('dialog-title');
-        const atomicEl = document.getElementById('dlg-atomic');
-        const symbolEl = document.getElementById('dlg-symbol');
-        const nameEl = document.getElementById('dlg-name');
-        const summaryEl = document.getElementById('dlg-summary');
-        const categoryEl = document.getElementById('dlg-category');
-        const phaseEl = document.getElementById('dlg-phase');
-        const appearanceEl = document.getElementById('dlg-appearance');
-        const massEl = document.getElementById('dlg-mass');
-        const meltEl = document.getElementById('dlg-melt');
-        const boilEl = document.getElementById('dlg-boil');
-        const densityEl = document.getElementById('dlg-density');
-        const molarHeatEl = document.getElementById('dlg-molar-heat');
-        const discoveredByEl = document.getElementById('dlg-discovered-by');
-        const namedByEl = document.getElementById('dlg-named-by');
-        const electronConfigEl = document.getElementById('dlg-electron-config');
-        const electronAffinityEl = document.getElementById('dlg-electron-affinity');
-        const electronegativityEl = document.getElementById('dlg-electronegativity');
-        const ionizationEnergyEl = document.getElementById('dlg-ionization-energy');
-        const shellsEl = document.getElementById('dlg-shells');
-        const groupEl = document.getElementById('dlg-group');
-        const periodEl = document.getElementById('dlg-period');
-        const blockEl = document.getElementById('dlg-block');
-        const posEl = document.getElementById('dlg-pos');
-        const sourceEl = document.getElementById('dlg-source');
-
-        const API_URL = 'https://api.apiverve.com/v1/periodictable';
-        const API_KEY = '29fa188b-b540-4af2-bf0f-b7c7591c3850';
-
-        async function fetchElementBySymbol(symbol) {
-          const url = `${API_URL}?symbol=${encodeURIComponent(symbol)}`;
-          const res = await fetch(url, {
-            headers: { 'x-api-key': API_KEY, 'accept': 'application/json' }
-          });
-          if (!res.ok) {
-            const text = await res.text();
-            throw new Error(`HTTP ${res.status}: ${text}`);
-          }
-          const json = await res.json();
-          return json.data;
-        }
-
-        async function fetchElementByName(name) {
-          const url = `${API_URL}?name=${encodeURIComponent(name)}`;
-          const res = await fetch(url, {
-            headers: { 'x-api-key': API_KEY, 'accept': 'application/json' }
-          });
-          if (!res.ok) {
-            const text = await res.text();
-            throw new Error(`HTTP ${res.status}: ${text}`);
-          }
-          const json = await res.json();
-          return json.data;
-        }
-
-        function fmtNum(n, digits = 2) {
-          if (n === undefined || n === null) return '—';
-          const num = typeof n === 'number' ? n : Number(n);
-          if (!Number.isFinite(num)) return String(n);
-          return Number.isInteger(num) ? String(num) : String(num.toFixed(digits));
-        }
-
-        function populate(data) {
-          title.textContent = data?.name || 'Element Details';
-          atomicEl.textContent = data?.number ?? data?.atomic_number ?? '—';
-          symbolEl.textContent = data?.symbol ?? '—';
-          nameEl.textContent = data?.name ?? '—';
-          summaryEl.textContent = data?.summary ?? data?.description ?? '—';
-          categoryEl.textContent = data?.category ?? '—';
-          phaseEl.textContent = data?.phase ?? '—';
-          appearanceEl.textContent = data?.appearance ?? '—';
-          massEl.textContent = fmtNum(data?.atomic_mass);
-          meltEl.textContent = fmtNum(data?.melt);
-          boilEl.textContent = fmtNum(data?.boil);
-          densityEl.textContent = fmtNum(data?.density);
-          molarHeatEl.textContent = fmtNum(data?.molar_heat);
-          discoveredByEl.textContent = data?.discovered_by ?? '—';
-          namedByEl.textContent = data?.named_by ?? '—';
-          electronConfigEl.textContent = data?.electron_configuration || data?.electron_configuration_semantic || '—';
-          electronAffinityEl.textContent = fmtNum(data?.electron_affinity);
-          electronegativityEl.textContent = fmtNum(data?.electronegativity_pauling);
-          ionizationEnergyEl.textContent = Array.isArray(data?.ionization_energies) && data.ionization_energies.length ? fmtNum(data.ionization_energies[0]) : '—';
-          shellsEl.textContent = Array.isArray(data?.shells) ? data.shells.join(', ') : '—';
-          groupEl.textContent = data?.group ?? '—';
-          periodEl.textContent = data?.period ?? '—';
-          blockEl.textContent = data?.block ?? '—';
-          posEl.textContent = (data?.xpos && data?.ypos) ? `${data.xpos}, ${data.ypos}` : '—';
-          if (data?.source) {
-            sourceEl.textContent = 'View Source';
-            sourceEl.href = data.source;
-            sourceEl.target = '_blank';
-            sourceEl.rel = 'noopener noreferrer';
-          } else {
-            sourceEl.textContent = '—';
-            sourceEl.removeAttribute('href');
-          }
-        }
-
-        function setLoading() {
-          title.textContent = 'Loading…';
-          atomicEl.textContent = '—';
-          symbolEl.textContent = '—';
-          nameEl.textContent = '—';
-          summaryEl.textContent = '—';
-          categoryEl.textContent = '—';
-          phaseEl.textContent = '—';
-          appearanceEl.textContent = '—';
-          massEl.textContent = '—';
-          meltEl.textContent = '—';
-          boilEl.textContent = '—';
-          densityEl.textContent = '—';
-          molarHeatEl.textContent = '—';
-          discoveredByEl.textContent = '—';
-          namedByEl.textContent = '—';
-          electronConfigEl.textContent = '—';
-          electronAffinityEl.textContent = '—';
-          electronegativityEl.textContent = '—';
-          ionizationEnergyEl.textContent = '—';
-          shellsEl.textContent = '—';
-          groupEl.textContent = '—';
-          periodEl.textContent = '—';
-          blockEl.textContent = '—';
-          posEl.textContent = '—';
-          sourceEl.textContent = '—';
-          sourceEl.removeAttribute('href');
-        }
-
-        const closeBtn = dialog.querySelector('.close-btn');
-        closeBtn.addEventListener('click', () => dialog.close());
-
-        document.querySelectorAll('.box').forEach(box => {
-          box.addEventListener('click', async () => {
-            const tileSymbol = box.querySelector('h1')?.textContent?.trim() || '';
-            const tileName = box.querySelector('h3')?.textContent?.trim() || '';
-            dialog.showModal();
-            setLoading();
-            try {
-              const data = await fetchElementBySymbol(tileSymbol);
-              populate(data);
-            } catch (e1) {
-              try {
-                const data = await fetchElementByName(tileName);
-                populate(data);
-              } catch (e2) {
-                title.textContent = 'Failed to load';
-                console.error(e1, e2);
-              }
-            }
-          });
-        });
-
-        dialog.addEventListener('click', (e) => {
-          const rect = dialog.getBoundingClientRect();
-          const inDialog = (
-            e.clientX >= rect.left &&
-            e.clientX <= rect.right &&
-            e.clientY >= rect.top &&
-            e.clientY <= rect.bottom
-          );
-          if (!inDialog) dialog.close();
-        });
-      })();
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
