minor html edit

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         <button type="button" class="close-btn" aria-label="Close">✕</button>
       </form>
       <div class="dialog-content" id="dialog-content">
-        <p id="dialog-desc">Click an element to see its details.</p>
+        <p id="dialog-desc">Details of the element</p>
         <dl class="element-data">
           <div><dt>Atomic Number</dt><dd id="dlg-atomic">—</dd></div>
           <div><dt>Symbol</dt><dd id="dlg-symbol">—</dd></div>
